Fixed user account on mobile, light dark header, user menu bar

--- a/app/globals.css
+++ b/app/globals.css
@@ -199,6 +199,12 @@
 }
 
 @layer base {
+  :root {
+    --bg: #ffffff;
+  }
+  .dark {
+    --bg: #190033;
+  }
   * {
     @apply border-border;
   }
